fix overflow cutting navbar

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -136,6 +136,7 @@ h1, h2, h3, h4{
 .topics{
     @extend .no-flick;
     padding-left: 0;
+    padding-bottom: 10px; // fix overflow cutting
     li{
         margin-bottom: 0.3em;
         list-style: none;
